# points-hs

./: .gitignore  .stan.toml  cabal.project.freeze  flake.nix  points.cabal
bench/: README.md
bench/src/: Main.hs
field/src/: Field.hs
field/tests/: FieldTests.hs  Tests.hs
